# AWS-Guardian

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.py  pyproject.toml  requirements.txt
agent/: graph.py  mcp_server.py  prompts.py
infra/: iam_policy.json  lambda_role.json
